<?xml version="1.0"?>
<package format="2">
  <name>wholebodycontact_locomotion_planner</name>
  <version>0.0.0</version>
  <description>The wholebodycontact_locomotion_planner package</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <author email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>choreonoid</depend>
  <depend>choreonoid_viewer</depend>
  <depend>choreonoid_cddlib</depend>
  <depend>choreonoid_qhull</depend>
  <depend>ik_constraint2</depend>
  <depend>ik_constraint2_distance_field</depend>
  <depend>ik_constraint2_bullet</depend>
  <depend>global_inverse_kinematics_solver</depend>
  <depend>prioritized_inverse_kinematics_solver2</depend>
  <depend>ik_constraint2_scfr</depend>
  <depend>trajectory_optimizer</depend>

</package>
